--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ header{
   transition: transform 0.2s;
 }
 .box1 img:hover {
+
 }
 #boxesr .boxr img{
   width:100px;
@@ -116,6 +117,10 @@ footer{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+.centered2 {
+  position: absolute;
+  left: 30%;
 }
 
 
