--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,29 @@ body{
   position: relative;
 }
 
+.col-1 {height: 8.33%;}
+.col-2 {height: 16.66%;}
+.col-3 {height: 25%;}
+.col-4 {height: 33.33%;}
+.col-5 {height: 41.66%;}
+.col-6 {height: 50%;}
+.col-7 {height: 58.33%;}
+.col-8 {height: 66.66%;}
+.col-9 {height: 75%;}
+.col-10 {height: 83.33%;}
+.col-11 {height: 91.66%;}
+.col-12 {height: 100%;}
+
+@media only screen and (min-width: 720px) {
+  [class*="col-"] {
+    height: 220px;
+  }
+}
+@media only screen and (min-width: 1080px) {
+  [class*="col-"] {
+    height: 280px;
+  }
+}
 .container1{
   width:100%;
 }
@@ -57,7 +80,6 @@ header{
 
 
 #boxes{
-  margin-top:20px;
 	font: 2vw Arial, Helvetica, sans-serif;
 }
 
